<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Stockage et Modèles">

        <Preference
            android:key="directory"
            android:title="@string/pref_title_directory"
            android:summary="@string/pref_summary_directory"
            android:icon="@drawable/ic_outline_folder" />

        <ListPreference
            android:key="invoice_template"
            android:title="@string/pref_title_template"
            android:summary="@string/pref_summary_template"
            android:entries="@array/template_entries"
            android:entryValues="@array/template_values"
            android:icon="@drawable/ic_outline_template"
            android:defaultValue="invoice_template.html" />

        <Preference
            android:key="preview_templates"
            android:title="@string/pref_title_preview"
            android:summary="@string/pref_summary_preview"
            android:icon="@drawable/ic_outline_eye" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_backup">

        <Preference
            android:key="export_data"
            android:title="@string/pref_title_export"
            android:summary="@string/pref_summary_export"
            android:icon="@drawable/ic_outline_upload" />

        <Preference
            android:key="import_data"
            android:title="@string/pref_title_import"
            android:summary="@string/pref_summary_import"
            android:icon="@drawable/ic_outline_download" />

    </PreferenceCategory>

</PreferenceScreen>