<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Général">

        <SwitchPreferenceCompat
            android:key="theme"
            android:title="@string/pref_title_dark_mode"
            android:summary="@string/pref_summary_dark_mode"
            android:icon="@drawable/ic_outline_moon"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="dynamic_colors"
            android:title="@string/pref_title_dynamic_colors"
            android:summary="@string/pref_summary_dynamic_colors"
            android:icon="@drawable/ic_outline_brush"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="biometric_lock"
            android:title="Verrouillage biométrique"
            android:summary="Sécuriser l'accès à l'application"
            android:icon="@drawable/ic_outline_fingerprint"
            android:defaultValue="false" />

        <ListPreference
            android:key="language"
            android:title="@string/pref_title_language"
            android:summary="@string/pref_summary_language"
            android:entries="@array/language_options"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_tab_world"
            android:defaultValue="fr" />

        <ListPreference
             android:key="default_currency"
             android:title="@string/pref_title_currency"
             android:summary="@string/pref_summary_currency"
             android:entries="@array/currency_options"
             android:entryValues="@array/currency_values"
             android:icon="@drawable/ic_outline_cash"
             android:defaultValue="EUR" />

    </PreferenceCategory>

</PreferenceScreen>