<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/factureFragment">

    <fragment
        android:id="@+id/factureFragment"
        android:name="com.chouchene.factures.fragments.InvoiceGenrationFragment"
        android:label="@string/title_invoices"
        tools:layout="@layout/activity_invoice" />

    <fragment
        android:id="@+id/bonCommandeFragment"
        android:name="com.chouchene.factures.fragments.BonDeCommandeFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_bon_de_commande" />

    <fragment
        android:id="@+id/historiqueFragment"
        android:name="com.chouchene.factures.fragments.HistoriqueFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_historique" />

    <fragment
        android:id="@+id/clientsFragment"
        android:name="com.chouchene.factures.fragments.ListeClientsFragment"
        android:label="@string/title_clients"
        tools:layout="@layout/activity_list_clients" />

    <fragment
        android:id="@+id/parametresFragment"
        android:name="com.chouchene.factures.fragments.RapportsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_rapports" />

    <!-- Secondary navigation -->
    <fragment
        android:id="@+id/webViewPdfFragment"
        android:name="com.chouchene.factures.fragments.WebViewPdfFragment"
        android:label="PDF Preview"
        tools:layout="@layout/activity_webview_pdf_sendmail" />

    <fragment
        android:id="@+id/templatePreviewFragment"
        android:name="com.chouchene.factures.fragments.TemplatePreviewFragment"
        android:label="@string/pref_title_preview"
        tools:layout="@layout/fragment_template_preview" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.chouchene.factures.fragments.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.chouchene.factures.fragments.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <activity
        android:id="@+id/settingsActivity"
        android:name="com.chouchene.factures.SettingsActivity"
        android:label="@string/title_settings" />

</navigation>
